kubernetes/collaboration-service/collaboration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collaboration-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /history/data
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 80
